# Task-Tracker

./: .env.sample  README.md  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
tasks/: admin.py  models.py  serializers.py  tests.py  urls.py  validators.py  views.py
tasks/migrations/: 0001_initial.py  0002_task.py  0003_employee_user_task_is_active_task_is_related_and_more.py
users/: models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
